Fix AutoplayUmaHelper when autoplay is initiated from multiple sources

This CL makes AutoplayUmaHelper to handle the case where the page
autoplays by both attribute and play() method. Therefore we can avoid
counting the metrics into the wrong bucket.

BUG=699176

Review-Url: https://codereview.chromium.org/2767093002
Cr-Commit-Position: refs/heads/master@{#459215}

Former-commit-id: 3d3dfcd34e38fcecaa1ff14bcd12cbc98259f36c